<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Banpberry Controller</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string-array name="menu_options_array">
        <item>Media Player</item>
        <item>Media Browser</item>
        <item>Lights</item>
        <item>Camera</item>
        <item>Banpotify</item>
        <item>Services</item>
        <item>Logs</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
    <string name="play"><![CDATA[>]]></string>
    <string name="pause"><![CDATA[||]]></string>
    <string name="fforward"><![CDATA[>>]]></string>
    <string name="fbackward"><![CDATA[<<]]></string>
    <string name="nexttrack"><![CDATA[>>|]]></string>
    <string name="previoustrack"><![CDATA[|<<]]></string>
    <string name="stop"><![CDATA[[]]]></string>
    <string name="restart"><![CDATA[R]]></string>
    <string name="info"><![CDATA[I]]></string>
    <string name="volup"><![CDATA[|))]]></string>
    <string name="voldown"><![CDATA[|)]]></string>

</resources>

